<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">stockmarket</string>
    <string name="action_settings">Settings</string>
    <string name="main_no_items">No Stock Items to Display</string>
    <string name="var">Var.</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_section1">My stocks</string>
    <string name="title_section2">Explore</string>
    <string name="title_section3">Graphs</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	<string name="stocks">Stocks</string>
</resources>
