<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
     >
    
    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="100dp"
	    android:id="@+id/plusbtn"
	    android:text="@string/plus"
	    android:clickable="true"
	    android:gravity="center"
	    >
    </TextView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" 
        android:gravity="center"
        >

        <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/mystocksnumber"
	    >
	    </TextView>
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/mystockslbl"
		    android:text="@string/stocks"
		    android:layout_marginLeft="20dp"
		    >
	    </TextView>
    </LinearLayout>
    
    
    
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:id="@+id/minusbtn"
    android:text="@string/minus"
    android:clickable="true"
    android:gravity="center"
    >   
	</TextView>
</LinearLayout>
